--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -32,26 +32,24 @@
               </child>
               <property name="content">
                 <object class="AdwStatusPage">
-                  <property name="title" translatable="true">Sidebar</property>
-                  <child>
-                    <object class="GtkButton" id="button">
-                      <property name="visible">false</property>
-                      <property name="halign">3</property>
-                      <property name="can-shrink">true</property>
-                      <property name="label" translatable="true">Open Content</property>
-                      <property name="action-name">navigation.push</property>
-                      <property name="action-target">'content'</property>
-                      <style>
-                        <class name="pill"/>
-                      </style>
-                    </object>
-                  </child>
                   <child>
                     <object class="GtkBox">
+                      <property name="orientation">vertical</property>
                       <child>
-                        <object class="GtkLabel">
-                          <property name="label" translatable="true">Sidebare</property>
+                        <object class="GtkButton" id="button">
+                          <property name="visible">false</property>
+                          <property name="halign">3</property>
+                          <property name="can-shrink">true</property>
+                          <property name="label" translatable="true">Open Content</property>
+                          <property name="action-name">navigation.push</property>
+                          <property name="action-target">'content'</property>
+                          <style>
+                            <class name="pill"/>
+                          </style>
                         </object>
+                      </child>
+                      <child>
+                        <object class="IcoSidebarView"></object>
                       </child>
                     </object>
                   </child>
