--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,12 +2,15 @@
   padding: 0.5rem 0.25rem;
   border-radius: 0.5rem;
 }
+.card--details-panel {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  /* Reverse this for rtl languages */
+}
 .icon-label {
   font-size: 0.875rem;
   opacity: 0.6;
-}
-.heading-2 {
-  font-size: 2rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -15,11 +18,6 @@
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.sets-list {
-  background: none;
-}
-.sets-list__row {
-  padding: 1rem 0.5rem;
-  border-radius: 0.5rem;
-  margin-top: 1rem;
+.opacity-7 {
+  opacity: 0.7;
 }
