--- a/src/ui/SidebarView.ui
+++ b/src/ui/SidebarView.ui
@@ -9,19 +9,17 @@
     <child>
       <object class="GtkListBox" id="iconSetsList">
         <style>
-          <class name="sets-list"/>
+          <class name="navigation-sidebar"/>
         </style>
         <child>
           <object class="GtkListBoxRow">
             <style>
-              <class name="sets-list__row"/>
-              <class name="mb-8"/>
             </style>
             <child>
-              <object class="GtkGrid">
+              <object class="GtkBox">
                 <child>
                   <object class="GtkLabel">
-                    <property name="label">All sets</property>
+                    <property name="label">All icons</property>
                     <property name="hexpand">1</property>
                     <property name="halign">1</property>
                   </object>
