--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   /* Reverse this for rtl languages */
+  background-color: #1d1d1d;
 }
 .icon-label {
   font-size: 0.875rem;
